; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_bte.c_BTE_ReadStoredLinkKey.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_bte.c_BTE_ReadStoredLinkKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, %struct.linkkey_info*, i32 }
%struct.linkkey_info = type { i32 }

@btstate = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@bte_read_stored_link_key_complete = common dso_local global i32 0, align 4
@ERR_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BTE_ReadStoredLinkKey(%struct.linkkey_info* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.linkkey_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.linkkey_info* %0, %struct.linkkey_info** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @_CPU_ISR_Disable(i32 %8)
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @btstate, i32 0, i32 3), align 8
  %11 = load %struct.linkkey_info*, %struct.linkkey_info** %4, align 8
  store %struct.linkkey_info* %11, %struct.linkkey_info** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @btstate, i32 0, i32 2), align 8
  %12 = load i32, i32* %5, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @btstate, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @btstate, i32 0, i32 0), align 8
  %13 = call i32 @hci_arg(%struct.TYPE_3__* @btstate)
  %14 = load i32, i32* @bte_read_stored_link_key_complete, align 4
  %15 = call i32 @hci_cmd_complete(i32 %14)
  %16 = call i32 (...) @hci_read_stored_link_key()
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @_CPU_ISR_Restore(i32 %17)
  %19 = load i32, i32* @ERR_OK, align 4
  ret i32 %19
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @hci_arg(%struct.TYPE_3__*) #1

declare dso_local i32 @hci_cmd_complete(i32) #1

declare dso_local i32 @hci_read_stored_link_key(...) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
